bug resolved with overflow

--- a/src/App/components/Section/components/LocationBlock/LocationBlock.module.scss
+++ b/src/App/components/Section/components/LocationBlock/LocationBlock.module.scss
@@ -43,6 +43,7 @@
   transition: 0.2s;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 
   &:focus-within {
     outline: none;
@@ -92,6 +93,10 @@
       display: flex;
       flex-direction: column;
       margin-right: $space-s;
+
+      &:hover {
+        @extend .onboarding;
+      }
     }
 
     .leftSide {
